# py-gems

./: .coveragerc  .gitignore  .travis.yml  README.md  pytest.ini  requirements.txt  setup.cfg
docs/: api.rst  conf.py  core-api.rst  index.rst  knowing.rst  pytest.ini  testing.rst
docs/knowing/: django.rst  functions-and-methods.rst  linux.rst  packaging.rst  patterns.rst  references.rst  tips-and-tricks.rst
docs/knowing/django/: restframework.rst
docs/knowing/patterns/: plugins-entry-points.rst
docs/knowing/patterns/scripts/plugin-entry-points/: demoplugin.py  list_console_scripts.py  list_console_scripts_pkg_resources.py
docs/knowing/scripts/: get_attribute_deep_using_dot_notation_01.py  get_attribute_deep_using_dot_notation_02.py
docs/testing/: pytest-tips.rst  test_markers.py
src/pygems/core/: __init__.py  contextlib.py  functools.py  namespace.py  plugin.py  shortcuts.py  timer.py
src/pygems/core/tests/: test_contextlib.py  test_functools.py  test_shortcuts.py  test_timer.py
