[metadata]
name = pygems
version = attr: pygems.core.__version__
description = Python gems core package
url = https://github.com/ivangeorgiev/py-gems
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
   = src
; packages = find:
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygems = pygems.cli:main
pygems.demoplugin =
    hello-world = pygems.demo.helloworld:hi
