[metadata]
name = pygems
version = attr: pygems.core.__version__
description = Python gems core package
url = https://github.com/ivangeorgiev/py-gems
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://py-gems.readthedocs.io/en/latest/index.html
    Source = https://github.com/ivangeorgiev/py-gems
    Tracker = https://github.com/ivangeorgiev/py-gems/issues

[options]
package_dir =
   = src
; packages = find:
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygems = pygems.cli:main
pygems.demoplugin =
    hello-world = pygems.demo.helloworld:hi
